force-app/main/default/objects/Mst_Grades__c/Mst_Grades__c.object-meta.xml
<CustomObject>
    <label>グレード</label>
    <nameField>
        <label>グレード名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>