force-app/main/default/objects/Mst_Grades__c/fields/Maker_en__c.field-meta.xml
<CustomField>
    <fullName>Maker_en__c</fullName>
    <formula>maker__r.maker_name_eizi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maker</label>
    <type>Text</type>
</CustomField>