force-app/main/default/objects/Mst_Grades__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>グレード</relationshipLabel>
    <relationshipName>assessments_grade</relationshipName>
    <type>Lookup</type>
</CustomField>