force-app/main/default/objects/Mst_Grades__c/fields/Name_en__c.field-meta.xml
<CustomField>
    <fullName>Name_en__c</fullName>
    <label>グレード名英字</label>
    <length>255</length>
    <type>Text</type>
</CustomField>