force-app/main/default/objects/Mst_Grades__c/fields/reserve2__c.field-meta.xml
<CustomField>
    <fullName>reserve2__c</fullName>
    <label>予備2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>