force-app/main/default/objects/Mst_Grades__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_en__c</columns>
    <columns>inum__c</columns>
    <columns>maker__c</columns>
    <columns>maker_code__c</columns>
    <columns>model__c</columns>
    <columns>model_code__c</columns>
    <columns>disp_flg__c</columns>
    <columns>row_num__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>